# notifier

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/notifier/: defferednotif.hpp  notifbase.hpp  notifbuilder.hpp  notifier.hpp
include/notifier/icon/: iconbase.hpp  sysicon.hpp
include/notifier/linux/: icon.hpp  notif.hpp
include/notifier/windows/: icon.hpp  notif.hpp
src/: defferednotif.cpp  notifbase.cpp  notifbuilder.cpp
src/linux/: icon.cpp  notif.cpp
src/windows/: icon.cpp  notif.cpp
utils/: uid.hpp
